# MTSE

./: .gitignore  Literature.md  PurePursuit.py  README.md  check_collision.py  nathan.py  networkxexample  test.py  test.txt  test_purepursuit.py
carla_setup/: CMakeLists.txt  README.md  package.xml
carla_setup/config/: ackermann.yaml  ego_vehicle_sensors.json
carla_setup/launch/: carla.launch
carla_setup/scripts/: carla_map.yaml  frames.gv  nathan.py  save_topology_map_from_carla.py  test_carla_ackermann_control.py
carla_setup/test/: test_carla_ackermann_control.py
launch_all/: CMakeLists.txt  package.xml
launch_all/config/: costmap.yaml  global_amcl_params.yaml  global_costmap_params.yaml  local_costmap.yaml
launch_all/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
launch_all/launch/: launch_all.launch
launch_all/launch/nodes_launch/amcl/: amcl.launch  gmapping.launch
launch_all/launch/nodes_launch/costmap_2d/: costmap_2d.launch
launch_all/pointcloud_to_laserscan/: laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
launch_all/rviz/: rviz_config.rviz  test_pure_pursuit_int_carla.rviz
launch_all/template_ros_package/: README.md
navigation/check_surrounding/: CMakeLists.txt  package.xml
navigation/check_surrounding/config/: check_surrounding.yaml
navigation/check_surrounding/scripts/: check_surrounding_node.py
navigation/goal_planner/: CMakeLists.txt  README.md  package.xml  setup.py
navigation/goal_planner/config/: goal_planner.yaml
navigation/goal_planner/launch/: goal_planner.launch
navigation/goal_planner/scripts/: goal_planner_node.py
navigation/goal_planner/src/goal_planner/: __init__.py  goal_planner.py  test_goalplanner.py
navigation/goal_planner/test/: goal_planner_node.test
navigation/purepursuit/: CMakeLists.txt  README.md  package.xml  setup.py
navigation/purepursuit/config/: purepursuit.yaml  purepursuit_carla.yaml  purepursuit_traxxas.yaml
navigation/purepursuit/launch/: dynampurepursuit.launch  get_coordinates.launch  purepursuit.launch  purepursuit_m_and_vs.launch  purepursuit_move_with_less_variable_speed.launch  purepursuit_move_with_variable_speed.launch  purepursuit_movement.launch  purepursuit_test_constant_speed.launch  purepursuit_test_variable_speed.launch  purepursuit_traxxas.launch  straight_forward.launch
navigation/purepursuit/launch/rviz/: rviz_config.rviz
navigation/purepursuit/scripts/: .purepursuit_node.py.swp  .tf_updater_node.py.swp  carla_waypoint_node.py  less_variable_speed_node.py  pose_writer.py  publish_external_pose_vrpn.py  purepursuit_node.py  random_waypoint_node.py  static_waypoint_node.py  straight_forward.py  tf_updater_node.py  variable_speed_node.py
navigation/purepursuit/src/purepursuit/: __init__.py  purepursuit.py
navigation/purepursuit/src/purepursuit/~/root/: Cookies  Network Persistent State  TransportSecurity  machineid  storage.json
navigation/purepursuit/src/purepursuit/~/root/Backups/: workspaces.json
navigation/purepursuit/src/purepursuit/~/root/Cache/: 625bbe30771f2f39_0  c85687354a0e770a_0  cac9ab0b3f630d6f_0  cbc42e4c979f69f0_0
navigation/purepursuit/src/purepursuit/~/root/Cache/index-dir/: the-real-index
navigation/purepursuit/src/purepursuit/~/root/CachedData/fd6f3bce6709b121a895d042d343d71f317d74e7/: AvailabilityData-ef23360260773ddce91668bf4e40372d.code  Base-dedd4f26f60327227e8a6ad23b556e3a.code  Channel-349d45063db1a229111b2c356bd8aec8.code  Config-c9d37786f9a1ce24f6c1947ab9031b8d.code  Console-e91621600c5a7d2383789d3e23dd7f89.code  Constants-91e78980883a0ece9ebb05b32f29b5df.code  Context-23c50c98560ba26359c8389f69aab403.code  ContextTagKeys-e33fad7f047fade7c665cb8b66caddb2.code  CorrelationContextManager-6c67facf6459dfa04dceabd5fff4b968.code  CorrelationIdManager-2319a91dc280fee0283b56681995f027.code  Data-285a216cfc327701419902efff059a7f.code  DataPoint-edc93bc8da2faf20005edc91f6cd48e9.code  (+160 more)
navigation/purepursuit/src/purepursuit/~/root/CachedExtensions/: builtin  user
navigation/purepursuit/src/purepursuit/~/root/Crash Reports/: client_id
navigation/purepursuit/src/purepursuit/~/root/GPUCache/: data_1  index
navigation/purepursuit/src/purepursuit/~/root/Session Storage/: LOG
navigation/purepursuit/src/purepursuit/~/root/exthost Crash Reports/: client_id
navigation/purepursuit/test/: .test_purepursuit.py.swp  .test_purepursuit_node.py.swp  SDC_carla_static_path.csv  SDC_carla_static_path_v1.csv  purepursuit_node.test  test_code.py  test_code_path.py  test_future_pt.py  test_paths.py  test_purepursuit.py  test_purepursuit_node.py  unit_test.test  unit_test_path.test
navigation/route_planner/: CMakeLists.txt  README.md  package.xml  setup.py
navigation/route_planner/config/: route_planner.yaml
navigation/route_planner/launch/: route_planner.launch
navigation/route_planner/scripts/: carla_map.yaml  route_planner_node.py
navigation/route_planner/src/route_planner/: __init__.py  route_planner.py
navigation/route_planner/test/: route_planner_node.test  test_code.py  test_route_planner.py
navigation/rrt/: .gitignore  CMakeLists.txt  README.md  package.xml  rrt_config.rviz  setup.py
navigation/rrt/config/: rrt.yaml
navigation/rrt/launch/: rrt.launch
navigation/rrt/msg/: TreeStamped.msg
navigation/rrt/scripts/: rrt_node.py
navigation/rrt/src/rrt/: __init__.py  dubins.py  rrt.py
navigation/rrt/test/: dummy_publish.py  rrt_node.test  static_costmap_publisher.py  test_code.py  test_rrt.py  visualization.py  visulization
navigation/yield_behavior/: CMakeLists.txt  package.xml
navigation/yield_behavior/config/: yield_behavior.yaml
navigation/yield_behavior/launch/: yield_behavior.launch
navigation/yield_behavior/scripts/: yield_behavior_node.py
navigation/yield_behavior/src/: yield_behavior_node.py
purepursuit/: CMakeLists.txt  package.xml
purepursuit/launch/: purepursuit.launch
purepursuit/scripts/: purepursuit_node.py  test_purepursuit_node.py
purepursuit/src/purepursuit/: __init__.py  purepursuit.py  test_purepursuit.py
purepursuit/test/: test_purepursuit.py
(+68 files in other folders)
