<?xml version="1.0"?>
<package format="2">
<name>carla_setup</name>
<version>0.0.0</version>
<description>The carla_setup package</description>

<maintainer email="user@todo.todo">user</maintainer>


<license>TODO</license>


<buildtool_depend>catkin</buildtool_depend>

<build_depend>rospy</build_depend>
<build_depend>message_generation</build_depend>

<build_export_depend>rospy</build_export_depend>
<build_export_depend>message_runtime</build_export_depend>

<exec_depend>rospy</exec_depend>
<exec_depend>message_runtime</exec_depend>

<depend>std_msgs</depend>

<export>
<!-- Other tools can request additional information be placed here -->

</export>
</package>
