<?xml version="1.0"?>
<package format="2">
	<name>carla_setup</name>
	<version>0.0.0</version>
	<description>The carla_setup package</description>

	<maintainer email="user@todo.todo">user</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<depend>ackermann_msgs</depend>
	<depend>carla_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>carla_ros_bridge</depend>


	<exec_depend>python-numpy</exec_depend>
	<exec_depend>python-opencv</exec_depend>

	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
