<?xml version="1.0"?>
<package format="2">
  <name>purepursuit</name>
  <version>0.0.0</version>
  <description>The purepursuit package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>ackermann_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf</depend>

    <exec_depend>python-shapely</exec_depend>

    <test_depend>rostest</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
