<?xml version="1.0"?>
<package format="2">
    <name>route_planner</name>
    <version>0.0.0</version>
    <description>The route_planner package</description>

    <maintainer email="user@todo.todo">user</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>std

    <exec_depend>python-shapely</exec_depend>
    <exec_depend>python-networkx</exec_depend>
    <exec_depend>python-matplotlib</exec_depend>
    <!-- exec_depend>python-osmnx</exec_depend -->

    <test_depend>rostest</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
