<?xml version="1.0"?>
<package format="2">
  <name>rrt</name>
  <version>0.0.0</version>
  <description>The rrt package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>

    <build_depend>message_generation</build_depend>

    <build_export_depend>message_runtime</build_export_depend>

    <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
